fix theme dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-[x-cloak] { display: none !important; } /*<-- This Line right here!*/
